--- a/Shadow Map.vcxproj
+++ b/Shadow Map.vcxproj
@@ -172,8 +172,12 @@
     <None Include="3.1.2.shadow_mapping_depth.vs" />
     <None Include="addShadows.fs" />
     <None Include="addShadows.vs" />
+    <None Include="calculatePenumbraSize.fs" />
+    <None Include="calculatePenumbraSize.vs" />
     <None Include="calculate_buffers.fs" />
     <None Include="calculate_buffers.vs" />
+    <None Include="DeferredLighting.fs" />
+    <None Include="DeferredLighting.vs" />
     <None Include="dilated_shadow_map.fs" />
     <None Include="dilated_shadow_map.vs" />
     <None Include="GaussFinal.fs" />
